DEV: Total of pollutant per source all region

--- a/views/main.html
+++ b/views/main.html
@@ -3,8 +3,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">{{selected_year.year}} EI Compilation 
-                </h1>
+                <h1 class="page-header">EI Compilation</h1>
                 
             </div>   
 
@@ -37,7 +36,7 @@
                             <tbody ng-repeat="region in readings">
                                 <tr>
                                     <!-- region -->
-                                    <td rowspan="3" class="labels">{{region.region}}</td>
+                                    <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.region}}</td>
                                     <!-- stationary -->
                                     <td class="labels" style="color: red">
                                         Stationary
