--- a/views/modal-entry.html
+++ b/views/modal-entry.html
@@ -19,24 +19,24 @@
     </div>
 
     <div class="form-group">
-      <label class="control-label">Source</label>
-      <select class="form-control" ng-model="$ctrl.selectedSource" ng-disabled="!$ctrl.selectedRegion">
-        <option value='' selected="true" ng-disabled="true">Select Source</option>
-        <option ng-repeat="source in $ctrl.source" ng-value="source">{{source}}</option>
-      </select>
-    </div>
-
-    <div class="form-group">
       <label class="control-label">Pollutant</label>
-      <select class="form-control" ng-model="$ctrl.selectedPollutant" ng-disabled="!$ctrl.selectedSource">
+      <select class="form-control" ng-model="$ctrl.selectedPollutant" ng-disabled="!$ctrl.selectedRegion">
         <option value='' selected="true" ng-disabled="true">Select Pollutants</option>
         <option ng-repeat="pollutant in $ctrl.resolve.year.pollutants" ng-value="pollutant.pollutant">{{pollutant.pollutant}}</option>
       </select>
     </div>
 
     <div class="form-group">
+      <label class="control-label">Source</label>
+      <select class="form-control" ng-model="$ctrl.selectedSource" ng-disabled="!$ctrl.selectedPollutant">
+        <option value='' selected="true" ng-disabled="true">Select Source</option>
+        <option ng-repeat="source in $ctrl.source" ng-value="source">{{source}}</option>
+      </select>
+    </div>
+
+    <div class="form-group">
       <label class="control-label">Value</label>
-      <input type="text" class="form-control" name="" ng-model="$ctrl.value" ng-disabled="!$ctrl.selectedPollutant" only-digits>
+      <input type="text" class="form-control" name="" ng-model="$ctrl.value" ng-disabled="!$ctrl.selectedSource" only-digits>
     </div>
 
   </div>
