--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="table-responsive">
-                        <table ng-show="noPollutants() == false || noRegion() == false" class="table table-striped table-bordered" style="overflow: auto; white-space: nowrap;" >
+                        <table class="table table-striped table-bordered" style="overflow: auto; white-space: nowrap;" >
                             <thead>
                                 <tr>
                                     <th>REGION</th>
@@ -42,7 +42,7 @@
                                 </tr>
                             </thead>
 
-                            <tbody ng-repeat="region in readings">
+                            <tbody ng-repeat="region in regions">
                                 <tr>
                                     <!-- region -->
                                     <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.region}}</td>
