REFACOR: Display no data

--- a/views/main.html
+++ b/views/main.html
@@ -83,7 +83,7 @@
                             </tbody>
                         </table>
 
-                        <div class="labels" ng-hide="noPollutants() == false || noRegion() == false" style="margin-top: 50px;">No Data to display.</div>
+                        <div class="labels" ng-hide="regions" style="margin-top: 50px;">No Data to display.</div>
                     </div>
                 </div>
             </div>
