--- a/views/modal-region.html
+++ b/views/modal-region.html
@@ -12,8 +12,17 @@
       <label class="control-label">Region</label>
       <input type="text" class="form-control" name="" ng-model="$ctrl.value">
     </div>
+    <div class="form-group">
+      <label class="control-label">Latitude</label>
+      <input type="" class="form-control" name="" ng-model="$ctrl.lat" only-big-decimals>
+    </div>
+    <div class="form-group">
+      <label class="control-label">Longitude</label>
+      <input type="text" class="form-control" name="" ng-model="$ctrl.long" only-big-decimals>
+    </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-success" ng-click="$ctrl.ok($ctrl.value)">Add</button>
+    <button type="button" class="btn btn-success" ng-click="$ctrl.ok($ctrl.value, $ctrl.lat, $ctrl.long)"
+    ng-disabled="!$ctrl.value || !$ctrl.lat || !$ctrl.long">Add</button>
   </div>
 </div>
