REFACTOR: Displaying of latlang

--- a/views/main.html
+++ b/views/main.html
@@ -50,10 +50,10 @@
                                     <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.region}}</td>
 
                                     <!-- lat -->
-                                    <td rowspan="3" class="labels" style="vertical-align: middle !important">Display latitude here</td>
+                                    <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.lattitude}}</td>
 
                                     <!-- long -->
-                                    <td rowspan="3" class="labels" style="vertical-align: middle !important">Display longitude here</td>
+                                    <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.longitude}}</td>
 
                                     <!-- stationary -->
                                     <td class="labels" style="color: red">
