--- a/views/main.html
+++ b/views/main.html
@@ -50,7 +50,7 @@
                                     <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.region}}</td>
 
                                     <!-- lat -->
-                                    <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.lattitude}}</td>
+                                    <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.latitude}}</td>
 
                                     <!-- long -->
                                     <td rowspan="3" class="labels" style="vertical-align: middle !important">{{region.longitude}}</td>
