--- a/views/main.html
+++ b/views/main.html
@@ -8,35 +8,39 @@
             </div>
             <div class="col-lg-8" style="margin-bottom: 40px; display: flex; justify-content: center; align-items: center;">
                 <h1>Emission Inventory Compilation WebApp</h1>
-            </div>
-            <div class="col-lg-2">
-                
             </div>                
 
-            <div class="form-group col-lg-4">
-                <select class="form-control" ng-model="current_year.year" ng-change="fetchReadings()" style="width: 100%;">
-                    <option value='' selected="true" disabled="disabled">Select Year</option>
-                    <option ng-repeat="year in years" ng-value="year.year">{{year.year}}</option>
-                </select>
-            </div>   
-            <div class="col-lg-2">
-                <button style="width: 100%" class="btn btn-success" ng-click="addYear()">Add Year</button>    
-            </div>
-            <div class="col-lg-2">
-                <button style="width: 100%" class="btn btn-success" ng-click="addRegion()" ng-disabled="!current_year.year">Add Region</button>
-            </div>
-            <div class="col-lg-2">
-                <button style="width: 100%" class="btn btn-success" ng-click="addPollutant()" ng-disabled="!current_year.year">Add Pollutant</button>
-            </div>
-            <div class="col-lg-2">
-                <button style="width: 100%" class="btn btn-success" ng-click="addEntry()" ng-disabled="!current_year.year">Add / Update Reading</button>
+            <div style="display: flex; flex-direction: row; justify-content: space-between; flex-wrap: wrap; width: 100%">
+                <div style="display: flex; flex: 1; padding: 5px;">
+                    <select class="form-control" ng-model="current_year.year" ng-change="fetchReadings()">
+                        <option value='' selected="true" disabled="disabled">Select Year</option>
+                        <option ng-repeat="year in years" ng-value="year.year">{{year.year}}</option>
+                    </select>
+                </div>
+                <div style="display: flex; flex: 1; padding: 5px">
+                    <button style="width: 100%" class="btn btn-success" ng-click="addYear()">Add Year</button>    
+                </div>
+                <div style="display: flex; flex: 1; padding: 5px">
+                    <button style="width: 100%" class="btn btn-success" ng-click="addRegion()" ng-disabled="!current_year.year">Add Region</button>
+                </div>
+                <div style="display: flex; flex: 1; padding: 5px">
+                    <button style="width: 100%" class="btn btn-success" ng-click="addPollutant()" ng-disabled="!current_year.year">Add Pollutant</button>
+                </div>
+                <div style="display: flex; flex: 1; padding: 5px">
+                    <button style="width: 100%" class="btn btn-success" ng-click="addEntry()" ng-disabled="!current_year.year">Add / Update Reading</button>
+                </div>
+                <div style="display: flex; flex: 1; padding: 5px; flex-direction: row;">
+                    <label style="display: flex; flex: 1; justify-content: center; align-items: center;">Sort by: </label>
+                    <select class="form-control" ng-init="selected_sort = sorting_options[0]" ng-model="selected_sort" ng-change="hasSelectedSort()" style="display: flex; flex: 1.5;" ng-disabled="!current_year.year">
+                        <option ng-repeat="sort in sorting_options" ng-value="sort">{{sort}}</option>
+                    </select>
+                </div>
             </div>
 
-            <!-- /.col-lg-12 -->
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-bordered" style="overflow: auto; white-space: nowrap;" >
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered" style="overflow: auto; white-space: nowrap;" >
                             <thead>
                                 <tr>
                                     <th>REGION</th>
